// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BlockTemplateService > should create a block template 1`] = `
[
  {
    "data": {
      "blocks": [
        {
          "title": "Title",
          "type": "title",
        },
      ],
      "name": "Name",
    },
  },
]
`;

exports[`BlockTemplateService > should create a block template containing another block template 1`] = `
[
  {
    "data": {
      "blocks": [
        {
          "templateId": "other",
          "type": "blockTemplate",
        },
      ],
      "name": "Name",
    },
  },
]
`;

exports[`BlockTemplateService > should delete a block template 1`] = `
[
  {
    "where": {
      "id": "1234",
    },
  },
]
`;

exports[`BlockTemplateService > should update a block template 1`] = `
[
  {
    "data": {
      "blocks": [
        {
          "title": "Title",
          "type": "title",
        },
      ],
      "name": "Name",
    },
    "where": {
      "id": "123",
    },
  },
]
`;

exports[`BlockTemplateService > should update a block template containing a non circular block template 1`] = `
[
  {
    "data": {
      "blocks": [
        {
          "templateId": "referenced",
          "type": "blockTemplate",
        },
      ],
      "name": "Name",
    },
    "where": {
      "id": "123",
    },
  },
]
`;
